Revelation changelog

---------------[ xxxx-xx-xx : 0.4.4 ]---------------

2005-06-30  Erik Grinaker <erikg@codepoet.no>

	* moved Timer class from ui module to data module

	* passwords are removed from clipboard after 60 seconds

2005-06-24  Erik Grinaker <erikg@codepoet.no>

	* option for copying password to clipboard on doubleclick

2005-06-02  Erik Grinaker <erikg@codepoet.no>

	* install module into pyexecdir, not pythondir

	* properly handle all gnome-vfs errors when reading/writing files

2005-06-01  Erik Grinaker <erikg@codepoet.no>

	* use correct indentation of entry labels in utility dialogs

	* improved the password checker dialog

	* use correct header capitalization in utility dialogs

	* improved icon theme error handling

2005-05-31  Erik Grinaker <erikg@codepoet.no>

	* removed "New file" item from toolbar

	* added new toolbar item "Add Folder", instead of creating
	folders via "Add Entry"

	* removed unit tests

2005-04-06  Erik Grinaker <erikg@codepoet.no>

	* don't crash on missing revelation logo icon


---------------[ 2005-03-31 : 0.4.3 ]---------------

2005-03-31  Erik Grinaker <erikg@codepoet.no>

	* search for crack_mkdict and crack_packer in addition to
	the normal cracklib commands

	* bumped version number to 0.4.3

2005-03-24  Erik Grinaker <erikg@codepoet.no>

	* don't wrap gnome_authentication_manager_dialog_is_visible()
	(only available from libgnomeui-2.7.92)

	* minor cleanups of authmanager wrapping code

2005-03-23  Erik Grinaker <erikg@codepoet.no>

	* make configure search for new cracklib-format and
	cracklib-packer commands as well as the old mkdict and
	packer commands

	* stop autolock-timer when manually locking file, to avoid
	crash when timer tries to re-lock file

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* added quit button to unlock file dialog


---------------[ 2005-03-22 : 0.4.2 ]---------------

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* check for mkdict/packer under /sbin and /usr/sbin in